--- a/furufuruFruit/src/main/resources/application.properties
+++ b/furufuruFruit/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=furufuruFruit
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.17.254:3306/furufurufruit?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=user6
+spring.datasource.password=1234
+
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
