--- a/furufuruFruit/src/main/resources/application.properties
+++ b/furufuruFruit/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
+
+#logging.level.org.springframework=debug
+#logging.level.org.springframework.web=debug
