--- a/furufuruFruit/src/main/resources/application.properties
+++ b/furufuruFruit/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=furufuruFruit
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.17.254:3306/furufurufruit?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://192.168.17.254:3306/coming_soon?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=user1
 spring.datasource.password=1234
 
